XMLExper/m12/m12_535_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLElement* tinyxml2::XMLDocument::NewElement(const char*)’:
tinyxml2.cpp:2288:52: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLElement*’ [-fpermissive]
 2288 |     return /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(ele);
      |                                                    ^~~
      |                                                    |
      |                                                    tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
